pragmatach-framework/src/main/antlr4/com/khubla/pragmatach/framework/uri/antlr4/RouteSpecification.g4
grammar RouteSpecification;

routespecification 
	: ('/' segment?)+;
segment	
	: pathsegment | idsegment;	
idsegment
	: AMPER id;	
pathsegment
	: ALPHANUM;
id	
	: ALPHANUM;
ALPHANUM
    : ('a'..'z'|'A'..'Z'|'0'..'9' | '*')+ ;
AMPER	
	: '@';
	
    
